fix(repo): make docker run
jar file failed